<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_navigation"
    app:startDestination="@+id/navigation_login">

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.livin.androidmvvmtodoapp.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_navigation_login_to_home"
            app:destination="@id/navigation_home"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popUpTo="@+id/navigation_login"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.livin.androidmvvmtodoapp.ui.home.HomeFragment"
        android:label="@string/title_Home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_add_edit_todo"
            app:destination="@id/navigation_todo"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_todo"
        android:name="com.livin.androidmvvmtodoapp.ui.todo.TodoFragment"
        android:label="@string/title_add_todo"
        tools:layout="@layout/fragment_todo">
        <argument
            android:name="todo_id"
            android:defaultValue="0"
            app:argType="integer" />
    </fragment>
</navigation>