<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/leftGuideLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/rightGuideLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/topGuideLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.1" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/rightGuideLine"
                app:layout_constraintStart_toEndOf="@id/leftGuideLine"
                app:layout_constraintTop_toBottomOf="@id/topGuideLine">

                <EditText
                    android:id="@+id/editTextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_title"
                    android:importantForAutofill="no"
                    android:inputType="textCapSentences"
                    android:maxLines="2"
                    android:padding="20dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="@id/rightGuideLine"
                app:layout_constraintStart_toEndOf="@id/leftGuideLine"
                app:layout_constraintTop_toBottomOf="@id/textInputLayoutTitle">

                <EditText
                    android:id="@+id/editTextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_description"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine|textCapSentences"
                    android:maxLength="100"
                    android:padding="20dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/gray"
                android:hint="@string/label_date"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="@id/rightGuideLine"
                app:layout_constraintStart_toEndOf="@id/leftGuideLine"
                app:layout_constraintTop_toBottomOf="@id/textInputLayoutDescription" />

            <TextView
                android:id="@+id/textViewTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/gray"
                android:hint="@string/time"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="@id/rightGuideLine"
                app:layout_constraintStart_toEndOf="@id/leftGuideLine"
                app:layout_constraintTop_toBottomOf="@id/textViewDate" />

            <TextView
                android:id="@+id/textViewFrequency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="20dp"
                android:text="@string/label_repeat_frequency"
                app:layout_constraintStart_toEndOf="@id/leftGuideLine"
                app:layout_constraintTop_toBottomOf="@id/textViewTime" />

            <RadioGroup
                android:id="@+id/radioGroupType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/textViewFrequency"
                app:layout_constraintEnd_toEndOf="@id/rightGuideLine"
                app:layout_constraintStart_toEndOf="@id/textViewFrequency"
                app:layout_constraintTop_toTopOf="@id/textViewFrequency">

                <RadioButton
                    android:id="@+id/radioButtonDaily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_daily" />

                <RadioButton
                    android:id="@+id/radioButtonWeekly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_weekly" />
            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonDelete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:text="@string/delete"
                android:textSize="13sp"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/buttonAdd"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/leftGuideLine"
                app:layout_constraintTop_toBottomOf="@id/radioGroupType" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonAdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:text="@string/label_add"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="@id/rightGuideLine"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/buttonDelete"
                app:layout_constraintTop_toBottomOf="@id/radioGroupType" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>